# SoftReX

./: README.md  pyproject.toml
src/: load.py  mutant.py  responsiblity.py  tree_util.py
tests/: test_load.py  test_mutation.py
tests/data/: equl.py  test_equl.py
